--- a/data-analysis/qualitative_analysis.ipynb
+++ b/data-analysis/qualitative_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 71,
    "id": "9184b40a-0542-4ce8-b2c2-7c9099ae5d75",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,13 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import chi2_contingency"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 73,
    "id": "89915eb4-7897-4d38-9998-4737013a2f0f",
    "metadata": {},
    "outputs": [],
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 75,
    "id": "6419da7f-21ae-4859-8050-a29d337ded6c",
    "metadata": {},
    "outputs": [
@@ -77,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 77,
    "id": "15a9bf82-ff48-4056-811a-4b7de560bb6c",
    "metadata": {},
    "outputs": [],
@@ -88,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 79,
    "id": "8bdec3a9-a6b0-48a8-92d0-6f1d69971935",
    "metadata": {},
    "outputs": [
@@ -116,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 81,
    "id": "28c17dd8-7255-4872-aea1-9492370644a0",
    "metadata": {},
    "outputs": [
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 83,
    "id": "594b774c-2c4c-42c8-94df-0804a59a5aab",
    "metadata": {},
    "outputs": [
@@ -157,7 +158,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_17112\\3674087240.py:3: FutureWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_1172\\3674087240.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -195,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 84,
    "id": "cff0444d-6181-43b7-858a-000f01716407",
    "metadata": {},
    "outputs": [],
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 87,
    "id": "bf2df38d-3b53-446d-8b59-a511abd1f3a6",
    "metadata": {},
    "outputs": [
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 89,
    "id": "d9fa7ebc-601e-4611-a741-2e77e3466aff",
    "metadata": {},
    "outputs": [
@@ -265,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 91,
    "id": "731204cb-fb46-41a7-932f-93d2385ad879",
    "metadata": {},
    "outputs": [
@@ -273,7 +274,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_17112\\213649230.py:3: FutureWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_1172\\213649230.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 92,
    "id": "1d885430-3455-46b3-aee3-a0565de0194f",
    "metadata": {},
    "outputs": [],
@@ -322,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 95,
    "id": "1a171feb-28e0-4a49-b483-a6212f717a96",
    "metadata": {},
    "outputs": [
@@ -350,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 97,
    "id": "cb0e1abd-4fc2-40c0-9c66-73c34c7a9237",
    "metadata": {},
    "outputs": [
@@ -389,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 99,
    "id": "20710974-0d6c-47be-b25e-4e4e8f261047",
    "metadata": {},
    "outputs": [
@@ -397,7 +398,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_17112\\2329095781.py:3: FutureWarning: \n",
+      "C:\\Users\\User\\AppData\\Local\\Temp\\ipykernel_1172\\2329095781.py:3: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 100,
    "id": "090170d3-86bd-48ae-a5c4-07662d26bd80",
    "metadata": {},
    "outputs": [],
@@ -445,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 122,
    "id": "956e8518-3c11-4896-8525-132d199d3f0f",
    "metadata": {},
    "outputs": [
@@ -453,23 +454,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U: 3.0 p-value: 0.10105025592540992\n"
+      "Chi-square Test Results\n",
+      "------------------------\n",
+      "Chi² statistic : 2.25\n",
+      "Degrees of freedom (df): 3\n",
+      "p-value        : 0.522\n",
+      "\n"
      ]
     }
    ],
    "source": [
     "# 4. AI Use Frequency\n",
     "\n",
-    "# A.4.Chi - Sqaure:\n"
+    "# A.4.Chi - Sqaure:\n",
+    "\n",
+    "\n",
+    "# Step 1: Build contingency table (future_use × gender)\n",
+    "contingency_table = pd.crosstab(df['future_use'], df['gender'])\n",
+    "\n",
+    "# Step 2: Run Chi-square test\n",
+    "chi2, p, dof, expected = chi2_contingency(contingency_table)\n",
+    "\n",
+    "# Step 3: Display results\n",
+    "print(\"Chi-square Test Results\")\n",
+    "print(\"------------------------\")\n",
+    "print(f\"Chi² statistic : {chi2:.2f}\")\n",
+    "print(f\"Degrees of freedom (df): {dof}\")\n",
+    "print(f\"p-value        : {p:.3f}\\n\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e292dd40-1e44-4c2f-a41f-901f0b3615dc",
+   "id": "9ec37554-1dbf-4d7d-8b1a-fc7fc09e53a6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Since Chi-square: χ² = 2.25, p = 0.522 (df = 3) → not significant, we can say No significant gender difference in intended future AI use."
+   ]
   }
  ],
  "metadata": {
