--- a/data-analysis/analysis_basics.ipynb
+++ b/data-analysis/analysis_basics.ipynb
@@ -3174,7 +3174,7 @@
    "id": "5d1a1989",
    "metadata": {},
    "source": [
-    "### Hypothesis B – Normality Results\n",
+    "### Hypothesis D – Normality Results\n",
     "\n",
     "- **Iteration Count:** Both female (p < .001) and male (p < .001) groups are significantly non-normal.  \n",
     "\n",
