--- a/data-analysis/analysis_basics.ipynb
+++ b/data-analysis/analysis_basics.ipynb
@@ -2926,6 +2926,53 @@
   },
   {
    "cell_type": "markdown",
+   "id": "54422cea",
+   "metadata": {},
+   "source": [
+    "For these DVs, both genders have p <= 0.05 which means they are not normally distributed:\n",
+    "1. Emotion words: emo_anger, emo_anticipation, emo_disgust, emo_fear, emo_joy, emo_sadness\n",
+    "2. Pronouns: pron_second, pron_third\n",
+    "3. Sentiment score\n",
+    "\n",
+    "So we will use Mann-Whitney U test for these."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15817547",
+   "metadata": {},
+   "source": [
+    "Mixed results (one group normal, one not):\n",
+    "\n",
+    "1. ttr (male p=0.13 > 0.05, female p=0.001 < 0.05)\n",
+    "\n",
+    "2. pron_first (female p=0.087 > 0.05, male p=0.006 < 0.05)\n",
+    "\n",
+    "If one side fails, we treat as non-normal overall → Mann–Whitney U test."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3e79637b",
+   "metadata": {},
+   "source": [
+    "Both groups approx normal (p > 0.05):\n",
+    "\n",
+    "1. opinion_score (female p=0.13, male p=0.10)\n",
+    "\n",
+    "Eligible for independent samples t-test (parametric)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53fa9b19",
+   "metadata": {},
+   "source": [
+    "### Mann-Whitney U test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9b3679d3",
    "metadata": {},
    "source": [
