--- a/data-analysis/main_analysis.ipynb
+++ b/data-analysis/main_analysis.ipynb
@@ -51,8 +51,8 @@
     "import csv\n",
     "import requests\n",
     "\n",
-    "SUPABASE_URL = \"https://vhuxlodxugpwodorwwzq.supabase.co\"\n",
-    "SUPABASE_KEY = \"sb_secret_iRWiJzUEwwbHNFA3A5LIUg_w_b9pmrh\"\n",
+    "SUPABASE_URL = \"<private-url>"\n",
+    "SUPABASE_KEY = \"<private-key>"\n",
     "\n",
     "def export_table_to_csv(table_name: str, filename):\n",
     "    \"\"\"\n",
