--- a/data-analysis/main_analysis.ipynb
+++ b/data-analysis/main_analysis.ipynb
@@ -51,9 +51,9 @@
     "import csv\n",
     "import requests\n",
     "\n",
-    "SUPABASE_URL = \"<private-url>\"\n",
-    "SUPABASE_KEY = \"<private-key>\"\n"
-    ],
+    "SUPABASE_URL = \"private\"\n",
+    "SUPABASE_KEY = \"private\"\n",
+    "\n",
     "def export_table_to_csv(table_name: str, filename):\n",
     "    \"\"\"\n",
     "    Export any Supabase table to a CSV file.\n",
